<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jiang</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="code">密码:</string>
    <string name="name">用户名:</string>
    <string name="edit">邮箱/手机号码:</string>
    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="get">获取验证码</string>
    <string name="ok">确定</string>
    <string name="house">周边房屋</string>
    <string name="holder">找房主</string>
    <string name="image">图片</string>
    <string name="addimage">添加图片</string>
    <string name="word">文字说明</string>
    <string name="top">首页</string>
    <string name="found">发现</string>
    <string name="share">分享</string>
    <string name="message">消息</string>
    <string name="myself">我的</string>
    <string name="send">发送</string>
    <string name="idea">此刻心情</string>
    <string name="my">个人主页</string>
    <string name="mycollect">我的收藏</string>
    <string name="mycare">我的关注</string>
    <string name="set">设置</string>

</resources>
